<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_margin="48dp">

        <TableRow
            android:background="@color/purple_500">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/c1"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="16dp"
                android:layout_weight="4"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/c2"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="16dp"
                android:layout_weight="4"
                android:gravity="center_horizontal" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1Title"
                android:padding="10sp"
                android:textSize="16dp"
                android:textColor="@color/dark_blue"
                android:layout_weight="4"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1Date"
                android:padding="10sp"
                android:textSize="16dp"
                android:textColor="@color/dark_blue"
                android:layout_weight="4"
                android:gravity="center_horizontal" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row2Title"
                android:padding="10sp"
                android:textSize="16dp"
                android:textColor="@color/dark_blue"
                android:layout_weight="4"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row2Date"
                android:padding="10sp"
                android:textSize="16dp"
                android:textColor="@color/dark_blue"
                android:layout_weight="4"
                android:gravity="center_horizontal" />

        </TableRow>

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Publish" />

    </TableLayout>

</RelativeLayout>